JETcompiler/Tests/bad/bad016.myout
Error while processing expression: invalid argument type for function "printDouble". Expecting "DoubleType" and instead "IntegerType" was provided, line 4.
